Use silent rules for building.

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_INIT([TGL], [0.01], [jasonlingle@yahoo.com])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/tgl.c])
 AC_CONFIG_HEADERS([config.h])
+AM_SILENT_RULES(yes)
 
 # Checks for programs.
 AC_PROG_CC
