Add basic payload functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,8 @@ BUILTIN_FILES = \
  builtins/ctrl_if.c\
  builtins/history.c\
  builtins/stack_ops.c\
- builtins/string_ops.c
+ builtins/string_ops.c\
+ builtins/payload.c
 
 tgl_SOURCES = tgl.c strings.c interp.c builtins.c $(BUILTIN_FILES)
 
