--- a/configure.ac
+++ b/configure.ac
@@ -27,7 +27,7 @@ dnl AC_FUNC_MALLOC
 dnl AC_FUNC_REALLOC
 AC_FUNC_FORK
 AC_TYPE_PID_T
-AC_CHECK_FUNCS([dup2 memmove memset strerror])
+AC_CHECK_FUNCS([dup2 memmove memset strerror mkstemp])
 AC_CHECK_FUNCS([getopt_long], AC_DEFINE(_GNU_SOURCE, [],
                               [Use GNU Extensions if available]))
 
